--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ font:{size:6}
   
 </script>
 <main class="container py-5">
-<div style="height:300px">
+<div>
   <canvas id="myChart"></canvas>
 </div></main>
 
