--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     data: data,
     options: {
 responsive:true,
-maintainAspectRatio: true,
+maintainAspectRatio: false,
 indexAxis:'y',
 
 
@@ -178,7 +178,7 @@ font:{size:6}
   
 </script>
 <main class="container py-5">
-<div>
+<div style="height:300px">
   <canvas id="myChart"></canvas>
 </div></main>
 
