--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         }
       
 }
+@media screen and (min-width:800px){
+.chart1{
+height:900px}
+}
 
 
 
@@ -178,7 +182,7 @@ font:{size:6}
   
 </script>
 <main class="container py-5">
-<div style="height:300px">
+<div class="chart1" style="height:300px">
   <canvas id="myChart"></canvas>
 </div></main>
 
