--- a/index.html
+++ b/index.html
@@ -193,6 +193,91 @@ font:{size:6}
   );
 </script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+  const labels = [
+  "Redmi 10","Motorala G60","Motorola g31","Realme Narzo 50","Redmi Note 10 pro","Redmi note 10s","Realme C35","Realme Narzo 50A","Realme 9i","Samsung M12","Samsung F22","Realme Narzo 30 5G","Motorola G40 Fusion","Realme C21Y","Redmi Note 11","Oppo F19","Oppo A31","Samsung M21","Oppo A74 5G","Samsung M32","Redmi Note 10T 5g"
+  ];
+
+  const data = {
+    labels: labels,
+    datasets: [{
+      label: 'Avg benchmarks',
+      backgroundColor: 'red',
+      borderColor: 'rgb(255, 99, 132)',
+      data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
+ 122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
+  53478  , 95749.5 ,167779   ,95913  ,161020.5],
+    }]
+  };
+
+  const config = {
+    type: 'bar',
+    data: data,
+    options: {
+responsive:true,
+maintainAspectRatio: true,
+indexAxis:'y',
+
+
+
+scales: {
+      x: {
+        title: {
+          display: true,
+          text: 'The higher the score, the better the performance'
+        }
+      },
+      y: {
+        title: {
+          display: false,
+          
+        },
+        min: 0,
+        max: 210000,
+        ticks: {
+          // forces step size to be 50 units
+          stepSize: 7000,
+font:{size:6}
+        }
+      }
+}
+}
+
+
+  };
+  
+</script>
+<main class="container py-5">
+<div class="chart2" style="height:300px">
+  <canvas id="myChart2"></canvas>
+</div></main>
+
+<script>
+  const myChart = new Chart(
+    document.getElementById('myChart2'),
+    config
+  );
+</script>
+
 <section class="container pt-5" > 
 <div class="images_extra" style="background-image:url(https://images.pexels.com/photos/3082341/pexels-photo-3082341.jpeg?auto=compress&cs=tinysrgb&w=380) ; width: 380px;height: 229px;object-fit:cover;background-repeat: no-repeat;  "></div>
 
