--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ font:{size:6}
 </div></main>
 
 <script>
-  const myChart = new Chart(
+  const myChart2 = new Chart(
     document.getElementById('myChart2'),
     config
   );
