--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ font:{size:6}
     }]
   };
 
-  const config = {
+  const config2 = {
     type: 'bar',
     data: data,
     options: {
@@ -276,7 +276,7 @@ font:{size:14}
 <script>
   const myChart2 = new Chart(
     document.getElementById('myChart2'),
-    config
+    config2
   );
 </script>
 
