--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ font:{size:14}
 </div></main>
 
 <script>
-  const myChart2 = new Chart(
+  const myChart2 = new Chart2(
     document.getElementById('myChart2'),
     config2
   );
