--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ font:{size:14}
   
 </script>
 <main class="container py-5">
-<div class="chart2" style="height:300px;display:block">
+<div class="chart2" style="height:300px;display:none">
   <canvas id="myChart2"></canvas>
 </div></main>
 
