--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@ font:{size:14}
   };
   
 </script>
-<main class="container py-5">
-<div class="chart2" style="height:300px;display:none">
+<main class="container py-5 chart2" style="display:none">
+<div class="chart2" style="height:300px">
   <canvas id="myChart2"></canvas>
 </div></main>
 
