--- a/index.html
+++ b/index.html
@@ -31,16 +31,7 @@
 
 
 
-        @media screen and (max-width: 450px){
-        #carouselExampleDark,#carouselExampleCaptions{
-            width: 100%; 
-            padding: 20px;   
-        }
-        .frame{
-          display: none;
-        }
-      
-}
+   .chart2{display:none}
 @media screen and (min-width:800px){
 .chart1{
 display:none}
@@ -268,7 +259,7 @@ font:{size:14}
   };
   
 </script>
-<main class="container py-5 chart2" style="display:none">
+<main class="container py-5 chart2">
 <div class="chart2" style="height:300px">
   <canvas id="myChart2"></canvas>
 </div></main>
