--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ font:{size:14}
 </script>
 <main class="container py-5 chart2">
 <div class="chart2" style="height:600px">
-  <canvas id="myChart2"></canvas>
+  <canvas id="myChart2" style="height:600px"></canvas>
 </div></main>
 
 <script>
