--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ font:{size:6}
   };
 
   const config2 = {
-    type: 'bar',
+    type: 'line',
     data: data2,
     options: {
 responsive:true,
