--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ font:{size:6}
   };
 
   const config2 = {
-    type: 'line',
+    type: 'bubble',
     data: data2,
     options: {
 responsive:true,
@@ -249,7 +249,7 @@ scales: {
         ticks: {
           // forces step size to be 50 units
           stepSize: 7000,
-font:{size:14}
+font:{size:12}
         }
       }
 }
