--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ font:{size:6}
     datasets: [{
       label: 'Avg benchmarks',
       backgroundColor: 'red',
-      borderColor: 'rgb(255, 99, 300)',
+      borderColor: 'black',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
   53478  , 95749.5 ,167779   ,95913  ,161020.5],
@@ -223,7 +223,7 @@ font:{size:6}
   };
 
   const config2 = {
-    type: 'bubble',
+    type: 'bar',
     data: data2,
     options: {
 responsive:true,
