--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ font:{size:6}
     labels: labels2,
     datasets: [{
       label: 'Avg benchmarks',
-      backgroundColor: 'red',
+      backgroundColor: 'green',
       borderColor: 'black',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
@@ -249,7 +249,7 @@ scales: {
         ticks: {
           // forces step size to be 50 units
           stepSize: 7000,
-font:{size:12}
+font:{size:10}
         }
       }
 }
@@ -260,8 +260,8 @@ font:{size:12}
   
 </script>
 <main class="container py-5 chart2">
-<div class="chart2" style="height:600px">
-  <canvas id="myChart2" style="height:600px"></canvas>
+<div class="chart2" style="height:300px">
+  <canvas id="myChart2" style="height:300px"></canvas>
 </div></main>
 
 <script>
