--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ display:none}
   };
 
   const config = {
-    type: 'bar',
+    type: 'doughnut',
     data: data,
     options: {
 responsive:true,
@@ -270,6 +270,23 @@ font:{size:10}
     config2
   );
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+<script>   </script>
+
+
+
+
 
 <section class="container pt-5" > 
 <div class="images_extra" style="background-image:url(https://images.pexels.com/photos/3082341/pexels-photo-3082341.jpeg?auto=compress&cs=tinysrgb&w=380) ; width: 380px;height: 229px;object-fit:cover;background-repeat: no-repeat;  "></div>
