--- a/index.html
+++ b/index.html
@@ -282,12 +282,10 @@ font:{size:10}
 
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>  
 
-
-
-  const data = {
+  const data3 = {
   labels: [
     'Red',
     'Blue',
