--- a/index.html
+++ b/index.html
@@ -294,7 +294,11 @@ font:{size:10}
   datasets: [{
     label: 'My First Dataset',
     data: [300, 50, 100],
-    backgroundColor: Object.values(Utils.CHART_COLORS),
+    backgroundColor: [
+      'rgb(255, 99, 132)',
+      'rgb(54, 162, 235)',
+      'rgb(255, 205, 86)'
+    ],
     hoverOffset: 4
   }]
 };
