--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@ font:{size:10}
   ],
   datasets: [{
     label: 'My First Dataset',
-    data: [300, 50, 100],
+    data:  [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
+ 122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
+  53478  , 95749.5 ,167779   ,95913  ,161020.5],
     backgroundColor: [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
