--- a/index.html
+++ b/index.html
@@ -285,10 +285,12 @@ font:{size:10}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>  
 
-  const data3 = {
+ const data = {
   labels: [
-  "Pro","spro","mpro"
-  ];
+    "Re",
+    'Blue',
+    'Yellow'
+  ],
 
   datasets: [{
     label: 'My First Dataset',
