--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ font:{size:10}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>  
 
- const data = {
+ const data3 = {
   labels: [
     "Re",
     'Blue',
