--- a/index.html
+++ b/index.html
@@ -284,13 +284,11 @@ font:{size:10}
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>  
-
+const labels3 = [
+  "Redmi 10","Motorala G60","Motorola g31","Realme Narzo 50","Redmi Note 10 pro","Redmi note 10s","Realme C35","Realme Narzo 50A","Realme 9i","Samsung M12","Samsung F22","Realme Narzo 30 5G","Motorola G40 Fusion","Realme C21Y","Redmi Note 11","Oppo F19","Oppo A31","Samsung M21","Oppo A74 5G","Samsung M32","Redmi Note 10T 5g"
+  ];
  const data3 = {
-  labels: [
-    "Re",
-    'Blue',
-    'Yellow'
-  ],
+  labels:labels3 ,
 
   datasets: [{
     label: 'My First Dataset',
