--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@ const config3 = {
 
 
 <main class="container py-5 chart3">
-<div class="chart3" style="height:300px">
-  <canvas id="myChart3" style="height:300px"></canvas>
+<div class="chart3" style="height:300px;width:300px">
+  <canvas id="myChart3" style="height:300px;width:300px"></canvas>
 </div></main>
 
 <script>
@@ -359,7 +359,7 @@ const config3 = {
 
           <!-- Product 1 -- Redmi note 10s -->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4" >
-            <div id="hov" class="card product-card">
+            <div id="hov" class="card product-card" style="width:8vw">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1" style="text-decoration:none ;">6 GB RAM, 64 GB Storage</a>
