--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ const config3 = {
 
 
 <section class="container pt-5" > 
+<section class="container pt-5" > 
 
    
 
@@ -359,7 +360,7 @@ const config3 = {
 
           <!-- Product 1 -- Redmi note 10s -->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4" >
-            <div id="hov" class="card product-card" style="width:250px">
+            <div id="hov" class="card product-card" >
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1" style="text-decoration:none ;">6 GB RAM, 64 GB Storage</a>
@@ -401,7 +402,7 @@ const config3 = {
 
           <!-- Product 2 -- Oppo A74 5g -->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
-            <div id="hov"class="card product-card" style="width:250px">
+            <div id="hov"class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img style="align-content: center;" src="https://m.media-amazon.com/images/I/71geVdy6-OS._SX679_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">6 GB RAM, 128 GB Storage</a>
@@ -443,7 +444,7 @@ const config3 = {
           
           <!-- Product 3 -- MOTOROLA G40 Fusion -->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
-            <div id="hov" class="card product-card" style="width:250px">
+            <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/313sxf4Q6mL.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration:none ;">4 GB RAM, 64 GB Storage</a>
@@ -482,7 +483,7 @@ const config3 = {
           </div> 
           <!-- Product 4 -- Redmi Note 10T 5g-->
            <div class="col-lg-3 col-md-4 col-sm-6 px-2 mb-4">
-            <div id="hov" class="card product-card" style="width:280px">
+            <div id="hov" class="card product-card">
               <div class="product-card-actions d-flex align-items-center">
               </div><a class="card-img-top d-block overflow-hidden" ><img src="https://m.media-amazon.com/images/I/81oFpnDM2EL._SX679_.jpg" alt="Product"></a>
               <div class="card-body py-2"><a class="product-meta d-block fs-xs pb-1"  style="text-decoration: none ;">6 GB RAM, 128 GB Storage</a>
