--- a/index.html
+++ b/index.html
@@ -326,18 +326,6 @@ const config3 = {
  </script>
 
 
-<main class="container py-5 chart3">
-<div class="chart3" style="height:200px;width:200px">
-  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
-</div></main>
-
-<script>
-  const myChart3 = new Chart(
-    document.getElementById('myChart3'),
-    config3
-  );
-</script>
-
 
 
 
@@ -385,6 +373,19 @@ const config3 = {
                       </div>
                       <div class="modal-body" style="text-align:left ;">
              <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" alt="">
+
+<div class="chart3" style="height:200px;width:200px">
+  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
+</div>
+
+<script>
+  const myChart3 = new Chart(
+    document.getElementById('myChart3'),
+    config3
+  );
+</script>
+
+
              <iframe width="370" height="500" src="https://www.youtube.com/embed/Tw8SHRBzf7c" title="Redmi Note 10S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
              <iframe width="370" height="600" src="https://www.youtube.com/embed/RPjet39roTk" title="Redmi Note 10s Unboxing Lunched India" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
