--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@ display:none}
     labels: labels,
     datasets: [{
       label: 'Avg benchmark',
-      backgroundColor: '#0d6efd',
+      backgroundColor:  [
+      'rgb(255, 99, 132)',
+      'rgb(54, 162, 235)',
+      'rgb(255, 205, 86)'
+    ],
       borderColor: 'rgb(255, 99, 132)',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
  122988,   69118,  102768,  166774.5, 161562,   99167,  130999.5, 111180,
@@ -326,7 +330,16 @@ const config3 = {
  </script>
 
 
+<div class="chart3" style="height:200px;width:200px">
+  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
+</div>
 
+<script>
+  const myChart3 = new Chart(
+    document.getElementById('myChart3'),
+    config3
+  );
+</script>
 
 
 <section class="container pt-5" > 
@@ -373,19 +386,6 @@ const config3 = {
                       </div>
                       <div class="modal-body" style="text-align:left ;">
              <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" alt="">
-
-<div class="chart3" style="height:200px;width:200px">
-  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
-</div>
-
-<script>
-  const myChart3 = new Chart(
-    document.getElementById('myChart3'),
-    config3
-  );
-</script>
-
-
              <iframe width="370" height="500" src="https://www.youtube.com/embed/Tw8SHRBzf7c" title="Redmi Note 10S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
              <iframe width="370" height="600" src="https://www.youtube.com/embed/RPjet39roTk" title="Redmi Note 10s Unboxing Lunched India" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
