--- a/index.html
+++ b/index.html
@@ -385,6 +385,10 @@ const config3 = {
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
                 Quick view
                 </button>
+
+<script>const popover = new bootstrap.Popover('.example-popover', {
+  container: 'body'
+})</script>
 <button type="button" class="btn btn-secondary"
         data-bs-toggle="popover" data-bs-placement="right"
         data-bs-custom-class="custom-popover"
