--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ const config3 = {
                 Quick view
                 </button>
 
-<script>const popover = new bootstrap.Popover('.example-popover', {
+<script>const popover = new bootstrap.Popover('.custom-popover', {
   container: 'body'
 })</script>
 <button type="button" class="btn btn-secondary"
