--- a/index.html
+++ b/index.html
@@ -386,7 +386,13 @@ const config3 = {
                 Quick view
                 </button>
 
-<script>const popover = new bootstrap.Popover('.custom-popover', {
+<script>
+const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+
+
+
+const popover = new bootstrap.Popover('.custom-popover', {
   container: 'body'
 })</script>
 <button type="button" class="btn btn-secondary"
