--- a/index.html
+++ b/index.html
@@ -390,9 +390,16 @@ const config3 = {
 
 </script>
 
-<button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover1" data-bs-placement="bottom" data-bs-content="Bottom popover">
-  Popover on top
-</button>
+<button
+      type="button"
+      class="btn btn-secondary"
+      data-bs-container="body"
+      data-bs-toggle="popover"
+      data-bs-placement="top"
+      data-bs-content="Top popover"
+    >
+      Popover on top
+    </button>
 <!-- Modal -->
                 <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel1" aria-hidden="true">
                   <div  class="modal-dialog modal-dialog-scrollable">
