--- a/index.html
+++ b/index.html
@@ -300,7 +300,11 @@ const labels3 = ["Note 10 pro","Price range best"]
     backgroundColor: [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
-      'rgb(255, 205, 86)'
+      'rgb(255, 205, 86)',
+      'rgb(255, 20, 100)',
+       'rgb(155, 58, 86)',
+        'rgb(95, 25, 216)',
+        'rgb(55, 25, 211)',
     ],
   
   }]
@@ -376,24 +380,7 @@ const config3 = {
               <div class="card-body card-body-hidden">
                 <button class="btn btn-primary btn-sm d-block w-100 mb-2" type="button" style="font-size:20px ;"><a href="https://amzn.to/3cIPHzj" style="color:white ;text-decoration: none;">View price on Amazon</a></button>
                 <div class="text-center"><button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
-                Quick view
                 </button>
-
-
-<script>
-
-</script>
-
-<button
-      type="button"
-      class="btn btn-secondary"
-      data-bs-container="body"
-      data-bs-toggle="popover"
-      data-bs-placement="top"
-      data-bs-content="Top popover"
-    >
-      Popover on top
-    </button>
 <!-- Modal -->
                 <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel1" aria-hidden="true">
                   <div  class="modal-dialog modal-dialog-scrollable">
