--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@ display:none}
       backgroundColor:  [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
-      'rgb(255, 205, 86)'
+      'rgb(255, 205, 86)',
+       'rgb(255, 20, 100)',
+       'rgb(155, 58, 86)',
+        'rgb(95, 25, 216)',
+        'rgb(55, 25, 211)',
     ],
       borderColor: 'rgb(255, 99, 132)',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
