--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ const config3 = {
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body" style="text-align:left ;">
-                          <ul>   <li><span class="bi bi-memory"> 4 GB RAM | 64 GB ROM  </span></li>  <li><span class="bi bi-display"> 17.22 cm (6.78 inch) Full HD+ Display  </span></li>  <li><span class="bi bi-camera" > 64MP + 8MP + 2MP | 16MP Front Camera  </span></li>  <li><span class="bi bi-battery-charging"> 6000 mAh Battery  </span></li>  <li><span class="bi bi-cpu"> Qualcomm Snapdragon 732G Processor  </span></li>  <li><span> 120Hz Refresh Rate  </span></li>  <li><span> Stock Android Experience  </span></li>  </ul>
+                          <ul>   <li><i class="bi bi-memory"> 4 GB RAM | 64 GB ROM  </i></li>  <li><i class="bi bi-display"> 17.22 cm (6.78 inch) Full HD+ Display  </i></li>  <li><i class="bi bi-camera" > 64MP + 8MP + 2MP | 16MP Front Camera  </i></li>  <li><i class="bi bi-battery-charging"> 6000 mAh Battery  </i></li>  <li><i class="bi bi-cpu"> Qualcomm Snapdragon 732G Processor  </i></li>  <li><i> 120Hz Refresh Rate  </i></li>  <li><span> Stock Android Experience  </span></li>  </ul>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
