--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <style>
 #hov:hover{box-shadow: 0 4px 12px 0 #006dFF}
 #hov{box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4)}
