--- a/index.html
+++ b/index.html
@@ -497,7 +497,8 @@ const config3 = {
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body" style="text-align:left ;">
-                        
+                        <ul><span class="bi bi-cpu">Processor-  </span><span class="bi bi-memory">RAM-   </span>
+<span class="bi bi-camera">Camera-    </span><span class="bi bi-badge-hd">Display-  </span></ul>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
