--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ const config3 = {
                         </div>
                         <div class="modal-body" style="text-align:left ;">
                         <span class="bi bi-cpu"> Processor-  </span><br><span class="bi bi-memory"> RAM-   </span><br>
-<span class="bi bi-camera"> Camera-    </span><br><span class="bi bi-badge-hd"> Display-  </span></li>
+<span class="bi bi-camera"> Camera-    </span><br><span class="bi bi-badge-hd"> Display-  </span><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><span class="bi bi-battery-charging"> Battery</span><br><span class="bi bi-sd-card"> Storage</span
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
