--- a/index.html
+++ b/index.html
@@ -343,18 +343,6 @@ const config3 = {
  </script>
 
 
-<div class="chart3" style="height:200px;width:200px">
-  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
-</div>
-
-<script>
-  const myChart3 = new Chart(
-    document.getElementById('myChart3'),
-    config3
-  );
-</script>
-
-
 <section class="container pt-5" > 
 <div class="images_extra" style="background-image:url(https://images.pexels.com/photos/3082341/pexels-photo-3082341.jpeg?auto=compress&cs=tinysrgb&w=380) ; width: 380px;height: 229px;object-fit:cover;background-repeat: no-repeat;  "></div>
 
@@ -498,7 +486,20 @@ const config3 = {
                         </div>
                         <div class="modal-body" style="text-align:left ;">
                         <span class="bi bi-cpu"> Processor-  </span><br><span class="bi bi-memory"> RAM-   </span><br>
-<span class="bi bi-camera"> Camera-    </span><br><span class="bi bi-badge-hd"> Display-  </span><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><span class="bi bi-battery-charging"> Battery</span><br><span class="bi bi-sd-card"> Storage-</span><br><span class="bi bi-lightning-charge"> Charging-  </span>
+<span class="bi bi-camera"> Camera-    </span><br><span class="bi bi-badge-hd"> Display-  </span><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><span class="bi bi-battery-charging"> Battery</span><br><span class="bi bi-sd-card"> Storage-</span><br><span class="bi bi-lightning-charge"> Charging-  </span><br>
+
+<div class="chart3" style="height:200px;width:200px">
+  <canvas id="myChart3" style="height:200px;width:200px"></canvas>
+</div>
+
+<script>
+  const myChart3 = new Chart(
+    document.getElementById('myChart3'),
+    config3
+  );
+</script>
+
+
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
