--- a/index.html
+++ b/index.html
@@ -335,10 +335,17 @@ const config3 = {
         text: 'Chart.js Doughnut Chart'
       },
 datalabels: {
-        formatter: (value) => {
-          return value + '%';
+            formatter: (value, ctx) => {
+                let sum = 0;
+                let dataArr = ctx.chart.data.datasets[0].data;
+                dataArr.map(data => {
+                    sum += data;
+                });
+                let percentage = (value*100 / sum).toFixed(2)+"%";
+                return percentage;
+            },
+            color: '#fff',
         }
-      }
     }
   },
 };
