--- a/index.html
+++ b/index.html
@@ -285,18 +285,6 @@ font:{size:10}
   );
 </script>
 
-
-
-
-
-
-
-
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>  
 const labels3 = ["Note 10 pro","Price range best"]
@@ -335,11 +323,7 @@ const config3 = {
         display: true,
         text: 'Chart.js Doughnut Chart'
       },
-labels: {
-          render: 'percentage',
-          fontColor: ['green', 'white', 'red'],
-          precision: 2
-        }
+
     }
   },
 };
@@ -494,8 +478,8 @@ labels: {
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body" style="text-align:left ;">
-                        <span class="bi bi-cpu"> Processor-  </span><br><span class="bi bi-memory"> RAM-   </span><br>
-<span class="bi bi-camera"> Camera-    </span><br><span class="bi bi-badge-hd"> Display-  </span><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><span class="bi bi-battery-charging"> Battery</span><br><span class="bi bi-sd-card"> Storage-</span><br><span class="bi bi-lightning-charge"> Charging-  </span><br>
+                        <span class="bi bi-cpu"> Processor-  </span><br><br><span class="bi bi-memory"> RAM-   </span><br><br>
+<span class="bi bi-camera"> Camera-    </span><br><br><span class="bi bi-badge-hd"> Display-  </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><br><span class="bi bi-battery-charging"> Battery</span><br><br><span class="bi bi-sd-card"> Storage-</span><br><br><span class="bi bi-lightning-charge"> Charging-  </span><br>
 
 <div class="chart3" style="height:200px;width:200px">
   <canvas id="myChart3" style="height:200px;width:200px"></canvas>
