--- a/index.html
+++ b/index.html
@@ -285,8 +285,16 @@ font:{size:10}
   );
 </script>
 
+
+
+
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 const labels3 = ["Note 10 pro","Price range best"]
   ;
  const data3 = {
@@ -323,6 +331,7 @@ const config3 = {
         display: true,
         text: 'Chart.js Doughnut Chart'
       },
+[ChartDataLabels]
 
     }
   },
