--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@ font:{size:10}
 
 
 
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
 const labels3 = ["Note 10 pro","Price range best"]
   ;
  const data3 = {
