--- a/index.html
+++ b/index.html
@@ -391,18 +391,8 @@ const config3 = {
                       </div>
                       <div class="modal-body" style="text-align:left ;">
 
-  <span class="bi bi-cpu"> Processor-  </span><br><br><span class="bi bi-memory"> RAM-   </span><br><br>
-<span class="bi bi-camera"> Camera-    </span><br><br><span class="bi bi-badge-hd"> Display-  </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- </span><br><br><span class="bi bi-battery-charging"> Battery</span><br><br><span class="bi bi-sd-card"> Storage-</span><br><br><span class="bi bi-lightning-charge"> Charging-  </span><br>
-
-<div><div style="width:30%"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cpu" viewBox="0 0 16 16">
-  <path d="M5 0a.5.5 0 0 1 .5.5V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2A2.5 2.5 0 0 1 14 4.5h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14a2.5 2.5 0 0 1-2.5 2.5v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14A2.5 2.5 0 0 1 2 11.5H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2A2.5 2.5 0 0 1 4.5 2V.5A.5.5 0 0 1 5 0zm-.5 3A1.5 1.5 0 0 0 3 4.5v7A1.5 1.5 0 0 0 4.5 13h7a1.5 1.5 0 0 0 1.5-1.5v-7A1.5 1.5 0 0 0 11.5 3h-7zM5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3zM6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
-</svg>Processor speed -3.2 Ghz-octacore</div></div>
-
-
-
-
-
-
+  <span class="bi bi-cpu"> Processor- Mediatek Helio G95 2.05 GHz  </span><br><br><span class="bi bi-memory"> RAM- 6 GB (2133 Mhz)  </span><br><br>
+<span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br><span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 60 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64 gb or 128 gb</span><br><br><span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging)(Full charging time- 1.09h)  </span><br>
 
 
 
