--- a/index.html
+++ b/index.html
@@ -397,9 +397,7 @@ const config3 = {
 
 
 
-             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" alt="">
-             <iframe width="370" height="500" src="https://www.youtube.com/embed/Tw8SHRBzf7c" title="Redmi Note 10S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-             <iframe width="370" height="600" src="https://www.youtube.com/embed/RPjet39roTk" title="Redmi Note 10s Unboxing Lunched India" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/ba5d873c-81c7-4432-88ca-47b2ec7e56e7.__CR0,0,1464,600_PT0_SX1464_V1___.jpg" alt=""><br><img src="https://m.media-amazon.com/images/I/71f0t04-l3L._SX679_.jpg" >
 
                       </div>
                       <div class="modal-footer">
