--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Top10tech</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  
 </head>
   <body>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -351,9 +351,7 @@ const config3 = {
 
 </section>
 
-<button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
-  Popover on top
-</button>
+
 
 <section class="container pt-5" > 
 <section class="container pt-5" > 
@@ -392,7 +390,7 @@ const config3 = {
                       <div class="modal-body" style="text-align:left ;">
 
   <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br><br><span class="bi bi-memory"> RAM- 6 GB or 8 GB(2133 Mhz)  </span><br><br>
-<span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 &nbsp; MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br><span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 60 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64 gb or 128 gb</span><br><br><span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) (Full charging &nbsp; time- 1.09h)  </span><br>
+<span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 &nbsp;&nbsp; MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br><span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 60 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64 gb or 128 gb</span><br><br><span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) (Full charging &nbsp;&nbsp;&nbsp; time- 1.09h)  </span><br>
 
 
 
