--- a/index.html
+++ b/index.html
@@ -143,7 +143,16 @@ display:none}
         'rgb(155, 25, 21)',
         'rgb(200, 135, 210)',
           'rgb(75, 25, 21)',
-         'rgb(55, 25, 210)',
+        'rgb(255, 255, 0)',
+          'rgb(0, 0, 128)',
+          'rgb(30, 144, 255)',
+          'rgb(75,0,130)',
+          'rgb(176, 196, 222)',
+          'rgb(255, 0, 255)',
+          'rgb(0, 255, 0)',
+          'rgb(255, 215, 0)',
+          'rgb(255, 228, 196)',
+          'rgb(112,128,144)',
     ],
       borderColor: 'rgb(255, 99, 132)',
       data: [114089.5, 169369.5 , 99189,  156271.5 ,193662,  187889,   88886.5 ,111065,
