--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ const config3 = {
 
 <!-- Graph pie --><script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-const labels4 = ["Note 10 pro","Price range best"]
+const labels4 = ["Oppo A74 5g","Price range best"]
   ;
  const data4 = {
   labels:labels4 ,
