--- a/index.html
+++ b/index.html
@@ -459,11 +459,15 @@ const labels4 = ["Oppo A74 5g","Price range best"]
 
   datasets: [{
     label: 'My First Dataset',
-    data:  [100,200],
+    data:  [114, 169],
     backgroundColor: [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
       'rgb(255, 205, 86)',
+      'rgb(255, 20, 100)',
+       'rgb(155, 58, 86)',
+        'rgb(95, 25, 216)',
+        'rgb(55, 25, 211)',
     ],
   
   }],
@@ -491,7 +495,12 @@ const config4 = {
 };
 
 
+
+
+
+
  </script>
+
                         
 <script>
   const myChart4 = new Chart(
