--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ const config3 = {
 
   <span class="bi bi-cpu"> Processor- Mediatek Helio G95 (2.05 GHz)  </span><br><br><span class="bi bi-memory"> RAM- 6 GB or 8 GB(2133 Mhz)  </span><br><br>
 <span class="bi bi-camera"> Camera- 64 MP(Main), 8 MP(Ultra wide), 2 &nbsp;&nbsp; MP(Macro lens), 2 MP(Depth lens), 13 MP(Front)  </span><br><br><span class="bi bi-badge-hd"> Display- Amoled (450 nits)(HDR10)(4.4 ms) </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 60 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64 gb or 128 gb</span><br><br><span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) (Full charging &nbsp;&nbsp;&nbsp; time- 1.09h)  </span><br>
-<div style="padding:8px;width:"80%";height:"240px;">
+<div style="padding:10px;width:"100%";height:"240px;align-items:center">
 <div class="chart3" style="height:200px;width:200px">
   <canvas id="myChart3" style="height:200px;width:200px"></canvas>
 </div>
@@ -504,8 +504,10 @@ const config4 = {
 };
 
  </script>
+<div style="padding:12px;width:"100%";height:"240px;align-items:center">
 <div class="chart4" style="height:200px;width:200px">
   <canvas id="myChart4" style="height:200px;width:200px"></canvas>
+</div>
 </div>
                         
 <script>
