--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ const labels4 = ["Oppo A74 5g","Price range best"]
 
   datasets: [{
     label: 'My First Dataset',
-    data:  [114, 169],
+    data:  [167779,187880],
     backgroundColor: [
       'rgb(255, 99, 132)',
       'rgb(54, 162, 235)',
