--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@ const labels4 = ["Oppo A74 5g","Price range best"]
     label: 'My First Dataset',
     data:  [167779,187880],
     backgroundColor: [
-      'rgb(255, 99, 132)',
-      'rgb(54, 162, 235)',
+      'red',
+      'green',
       'rgb(255, 205, 86)',
       'rgb(255, 20, 100)',
        'rgb(155, 58, 86)',
