--- a/index.html
+++ b/index.html
@@ -497,6 +497,8 @@ const config4 = {
         display: true,
         text: 'Chart.js Doughnut Chart'
       },
+labels:{
+         render:'percentage'},
 
 
     }
