--- a/index.html
+++ b/index.html
@@ -459,7 +459,10 @@ const config3 = {
   <span class="bi bi-cpu"> Processor- Qualcomm Snapdragon 480 5G (2 GHz) </span><br><br><span class="bi bi-memory"> RAM- 6 GB   </span><br><br>
 <span class="bi bi-camera"> Camera- Main(48 MP), Ultra wide(8 MP), Macro lens(2 MP), Depth lens(2 MP)    </span><br><br><span class="bi bi-badge-hd"> Display- LTPS LCD (480 nits)(28.6 ms)  </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 90 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh (Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 128 GB (256 GB max)(UFS 2.1)</span><br><br><span class="bi bi-lightning-charge"> Charging- Fast Charging(18 W)(Full charging time- 2h) </span><br>
 
-<!-- Graph pie --><script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- Graph pie -->
+<script src="https://unpkg.com/chart.js-plugin-labels-dv/dist/chartjs-plugin-labels.min.js"></script>
+<script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 const labels4 = ["Oppo A74 5g","Price range best"]
   ;
