--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ const config4 = {
       },
 labels:{
          render:'percentage'},
-         fontColor: 'white',
+         fontColor: '#FFFFFF',
 
 
     }
