--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@ const config4 = {
         text: 'Chart.js Doughnut Chart'
       },
 labels:{
-         render:'percentage'},
-         fontColor: '#FFFFFF',
+         render:'percentage',
+         fontColor: '#FFFFFF'},
 
 
     }
