--- a/index.html
+++ b/index.html
@@ -709,10 +709,11 @@ labels:{
 <span class="bi bi-camera"> Camera- Main(50 MP), Ultra wide(8 MP), Macro(2 MP), Depth(2 MP), 13 MP(Front)  </span><br><br><span class="bi bi-badge-hd"> Display- AMOLED(700 nits)(HDR 10+) </span><br><br><span class="bi bi-arrow-clockwise"> Refresh rate- 90 Hz </span><br><br><span class="bi bi-battery-charging"> Battery- 5000 mAh(Li-Po)</span><br><br><span class="bi bi-sd-card"> Storage- 64, 128 GB(1024 GB max)(UFS 2.2)</span><br><br><span class="bi bi-lightning-charge"> Charging- 33 W (Fast charging) (Full charging time - 1.18 h) </span><br>
 
 
-                          </div>
+                          
    <img src="https://m.media-amazon.com/images/I/81Z7NOX6YfL._SX679_.jpg" alt="" >
                     <img src="https://m.media-amazon.com/images/I/81+NQQYTwPL._SX679_.jpg" alt="" >
-                  
+                  </div>
+                        <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Understood</button>
                           </div>
