--- a/index.html
+++ b/index.html
@@ -341,9 +341,11 @@ const config3 = {
       },
       title: {
         display: true,
-        text: 'Chart.js Doughnut Chart'
+        text: 'Price range best vs Redmi Note 10 pro'
       },
-
+labels:{
+         render:'percentage',
+         fontColor: '#FFFFFF'},
 
     }
   },
@@ -498,7 +500,7 @@ const config4 = {
       },
       title: {
         display: true,
-        text: 'Chart.js Doughnut Chart'
+        text: 'Price range best vs Oppo A74 5G'
       },
 labels:{
          render:'percentage',
